Atualizando os endpoints de login e register para fazer parte da rota de users
